<?xml version="2.0"?>
<package>
  <name>turtlebro_keyboard_teleop</name>
  <version>2.0.0</version>
  <description>Generic keyboard teleop for twist robots.</description>

  <maintainer email="nikolay.ivanov@voltbro.com">Nikolay Ivanov</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/teleop_twist_keyboard</url>

  <author>Graylin Trevor Jay</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
</package>
